[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpx2maps"
version = "0.1.0"
description = "CLI tool to scrape GPX routes and convert them to Google Maps"
authors = [
    {name = "Pieter Kuppens"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "gpxpy>=1.6.0,<2.0.0",
    "googlemaps>=4.10.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
]

[project.scripts]
gpx2maps = "gpx2maps.cli:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["gpx2maps"]
